cabal-version: 2.4
name:          ogmios-datum-cache
version:       0.1.0.0
author:        mlabs
maintainer:    anton@mlabs.gmail
build-type:    Simple

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

common common-configs
  default-language: Haskell2010

library
  import:          common-language
  import:          common-configs
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-import-lists -Wmissing-export-lists
    -Wmissing-deriving-strategies -Werror -O2

  hs-source-dirs:  src
  exposed-modules:
    Api
    Api.Handler
    Api.Types
    Api.WebSocket
    Api.WebSocket.Json
    Api.WebSocket.Types
    App
    App.Env
    Block.Fetch
    Block.Types
    Config
    Database
    Parameters

  other-modules:
    Api.Error
    Block.Filter
    PlutusData

  build-depends:
    , aeson
    , async
    , base
    , base16
    , base64
    , bytestring
    , can-i-haz
    , cborg
    , containers
    , data-default
    , directory
    , exceptions
    , hasql
    , http-types
    , monad-logger
    , mtl
    , optparse-applicative
    , serialise
    , servant
    , servant-server
    , servant-websockets
    , text
    , tomland
    , transformers
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
    , websockets

executable ogmios-datum-cache
  import:         common-language
  import:         common-configs
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror -O2

  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , data-default
    , exceptions
    , hasql
    , monad-logger
    , mtl
    , ogmios-datum-cache
    , servant
    , servant-server
    , text
    , transformers
    , wai
    , wai-cors
    , wai-logger
    , warp

test-suite ogmios-datum-cache-test
  import:         common-language
  import:         common-configs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Spec.Api.WebSocket.Types
    Spec.Config

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror -O2
    -Wunused-packages -Wwarn

  build-depends:
    , aeson
    , base
    , directory
    , hspec
    , ogmios-datum-cache
    , string-interpolate
    , temporary
