cabal-version: 2.4
name:          ogmios-datum-cache
version:       0.1.0.0
author:        mlabs
maintainer:    anton@mlabs.gmail
build-type:    Simple

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

common common-configs
  default-language: Haskell2010

library
  import:          common-language
  import:          common-configs
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-import-lists -Wmissing-export-lists
    -Wmissing-deriving-strategies -Werror -O2
    -fplugin=RecordDotPreprocessor

  hs-source-dirs:  src
  exposed-modules:
    Api
    Api.Handler
    Api.WebSocket
    Api.WebSocket.Json
    Api.WebSocket.Types
    App
    App.Env
    App.Types
    Block.Fetch
    Config
    Database
    Parameters

  other-modules:
    Api.Error
    Api.Types
    Block.Filter
    Block.Types
    PlutusData

  build-depends:
    , aeson
    , base
    , base16
    , base64
    , bytestring
    , can-i-haz
    , cborg
    , containers
    , data-default
    , directory
    , exceptions
    , hasql
    , http-types
    , monad-logger
    , mtl
    , optparse-applicative
    , record-dot-preprocessor
    , record-hasfield
    , serialise
    , servant
    , servant-server
    , servant-websockets
    , stm
    , text
    , tomland
    , transformers
    , unordered-containers
    , vector
    , websockets
    , network

executable ogmios-datum-cache
  import:         common-language
  import:         common-configs
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror -O2
    -fplugin=RecordDotPreprocessor

  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , data-default
    , exceptions
    , hasql
    , monad-logger
    , mtl
    , ogmios-datum-cache
    , record-dot-preprocessor
    , record-hasfield
    , servant
    , servant-server
    , text
    , transformers
    , wai
    , wai-cors
    , wai-logger
    , warp

test-suite ogmios-datum-cache-test
  import:         common-language
  import:         common-configs
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Spec.Api.Handlers
    Spec.Api.WebSocket.Types

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies -Werror -O2
    -Wmissing-import-lists -Wunused-packages -fplugin=RecordDotPreprocessor

  build-depends:
    , aeson
    , base
    , exceptions
    , hspec
    , hspec-wai
    , ogmios-datum-cache
    , record-dot-preprocessor
    , record-hasfield
    , servant-server
